improvement: added docs for ActiveList and improved docs in general.
Also made the following changes:

1. Now exposing the `LicenseChecker` class with an underscore prefix,
   so people know it is private. The reason is so it shows up in the
   API documentation. Added "instance.njk" file for this type of
   documentation.

2. Explained what `isUserInteraction` actually does when it is false,
   and that it then goes into the debounce / reset behavior.

3. The vue documentation now uses the word composable instead of hook.

4. Updated the "website" package.json's dependencies.

5. The webpack config of the website now creates entries dynamically
   via glob, this way all files in "scripts" get their own entry.

6. Optimized the HTML elements in the apinav.njk file. Also fixed missing
   <li> elements.

7. In the footer changed "Documentation" to "Docs.

8. Fixed appearance of mobile menu in api pages. It was not displayed
   fixed by changing `top-full` to top `top-24`.

9. All API pages no render without a sticky footer, this negates the
   need for `renderData.stickyNavigation`.

10. Made text bigger in a lot of places.

11. Changed the highlight / link color to purple.

12. Made some gray texts darker for readability. Made some gray text
    completely black as well, especially for documentation / api
    text.

13. The "Page wrapper" in the base layout no longer set overflow to
    hidden. This allows for position sticky content.

14. Made api grid smaller on large devices so it can render 2 columns.

15. In "method.njk" fixed name of the link so it actually includes
    the method name instead of the class name.

16. In "typealias.njk" properties now also get fragment links so we
    can deep link to properties.

17. Improved copy in "home.njk" better explaining what uiloos is.
    Also removed placeholder video for now.

18. Split up the SCSS into multiple files.

19. Added prism to render code examples.

--- a/packages/website/src/_includes/components/apinav.njk
+++ b/packages/website/src/_includes/components/apinav.njk
@@ -1,12 +1,13 @@
 <!-- Sidebar -->
-<aside class="relative my-12 md:my-0 md:w-32 md:mr-12 lg:mr-20 md:shrink-0">
+<aside class="mt-24 mb-8 xl:w-64 xl:mr-12 xl:shrink-0">
 
-  <button class="flex items-center justify-between text-lg font-medium text-gray-900 w-full my-4 md:hidden">
-    <span>Docs navigation</span>
+  <button
+    class="flex items-center justify-between text-xl font-medium text-gray-900 w-full my-4 xl:hidden"
+  >
+    <span>API navigation</span>
   </button>
 
-  <!-- Docs nav -->
-  <nav class="md:block">
+  <nav class="mt-4 xl:block">
     <ul class="font-medium -my-2">
       <li class="py-2">
         <a class="flex items-center hover:underline" href="/api/core/">
@@ -14,19 +15,25 @@
             <span>Core</span>
           </div>
         </a>
-
+      </li>
+      
+      <li class="py-2">
         <a class="flex items-center hover:underline" href="/api/react/">
           <div class="flex items-center grow">
             <span>React</span>
           </div>
         </a>
-
+      </li>
+      
+      <li class="py-2">
         <a class="flex items-center hover:underline" href="/api/vue/">
           <div class="flex items-center grow">
             <span>Vue</span>
           </div>
         </a>
+      </li>
 
+      <li class="py-2">
         <a class="flex items-center hover:underline" href="/api/angular/">
           <div class="flex items-center grow">
             <span>Angular</span>
