--- a/packages/website/src/_includes/components/navigation.njk
+++ b/packages/website/src/_includes/components/navigation.njk
@@ -58,7 +58,7 @@
         <!-- Mobile navigation -->
         <nav
           id="mobile-nav"
-          class="absolute top-full h-screen pb-16 z-20 left-0 w-full overflow-scroll bg-white"
+          class="absolute top-24 h-screen pb-16 z-20 left-0 w-full overflow-scroll bg-white"
           @click.outside="expanded = false"
           @keydown.escape.window="expanded = false"
           x-show="expanded"
