--- a/packages/website/src/_includes/layouts/base.njk
+++ b/packages/website/src/_includes/layouts/base.njk
@@ -11,7 +11,7 @@
   <body class="font-inter antialiased bg-white text-gray-900 tracking-tight">
 
     <!-- Page wrapper -->
-    <div class="flex flex-col min-h-screen overflow-hidden">
+    <div class="flex flex-col min-h-screen">
 
       {% include "../components/navigation.njk" %}
 
