--- a/packages/website/src/pages/api/react/react.njk
+++ b/packages/website/src/pages/api/react/react.njk
@@ -6,8 +6,8 @@ permalink: /api/react/
 
 {% from "../_includes/macros.njk" import displayApi %}
 
-<div class="text-lg">
-  <h1 class="h1 text-gray-900 mb-4">React</h1>
+<div class="text-xl">
+  <h1 class="h1 mb-4">React</h1>
 
   <p class="mb-8">The React bindings for uiloos.</p>
 
