--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -24,14 +24,14 @@ permalink: /
   </div>
 
   <div class="max-w-6xl mx-auto px-4 sm:px-6 pt-32 mb-8 text-center">  
-    <h1 class="text-5xl md:text-6xl font-extrabold leading-tighter tracking-tighter mb-4" data-aos="zoom-y-out">Accelerate your <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-orange-600">development</span></h1>
+    <h1 class="text-5xl md:text-6xl font-extrabold leading-tighter tracking-tighter mb-4" data-aos="zoom-y-out">uiloos makes creating component libraries <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-orange-600">easier and faster</span></h1>
     <div class="max-w-3xl mx-auto">
-      <p class="text-xl text-gray-600 mb-8" data-aos="zoom-y-out" data-aos-delay="150">
-        uiloos is a headless UI library which provides common components without any styling. You create the design, "uiloos" provides the behavior.
+      <p class="text-xl text-gray-800 mb-8" data-aos="zoom-y-out" data-aos-delay="150">
+        uiloos is a headless UI library which provides common components without any styling. You create the design and "uiloos" provides the behavior.
       </p>
       <div class="max-w-xs mx-auto sm:max-w-none sm:flex sm:justify-center" data-aos="zoom-y-out" data-aos-delay="300">
         <div>
-          <a class="btn text-white bg-purple-600 hover:bg-purple-700 w-full mb-4 sm:w-auto sm:mb-0" href="/docs/getting-started/">Getting started</a>
+          <a class="btn text-white bg-purple-600 hover:bg-purple-700 w-full mb-4 sm:w-auto sm:mb-0" href="/docs/getting-started/installation/">Getting started</a>
         </div>
         <div>
           <a class="btn text-white bg-gray-900 hover:bg-gray-800 w-full sm:w-auto sm:ml-4" href="/pricing/">Pricing</a>
@@ -41,7 +41,7 @@ permalink: /
   </div>
 
   <!-- Hero image -->
-  <div x-data="{ modalExpanded: false }">
+  {# <div x-data="{ modalExpanded: false }">
     <div class="relative flex justify-center mb-16" data-aos="zoom-y-out" data-aos-delay="450">
       <div class="flex flex-col justify-center">
         <iframe id='video' width="768" height="432" src="https://www.youtube-nocookie.com/embed/bl5TUw7sUBs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -54,7 +54,7 @@ permalink: /
         <span class="ml-3">Watch the video (2 min)</span>
       </div>
     </div>
-  </div>
+  </div> #}
 </section>
 
 {# Use case #}
@@ -64,7 +64,7 @@ permalink: /
     <!-- Section header -->
     <div class="max-w-3xl mx-auto text-center mb-8">
       <h2 class="h2 mb-4">Behavior vs look and feel</h2>
-      <p class="text-xl text-gray-600 mb-4">
+      <p class="text-xl text-gray-800 mb-4">
         You handle the look and feel of your application / website and
         let uiloos handle the behavior. Spend more time configuring
         behavior instead of coding it, try it out yourself:
@@ -370,7 +370,7 @@ permalink: /
     <!-- Section header -->
     <div class="max-w-3xl mx-auto text-center mb-8">
       <h2 class="h2 mb-4">Works with your stack</h2>
-      <p class="text-xl text-gray-600">Use your favorite framework / library, or simply go vanilla. uiloos will work with your current stack and enhance it.</p>
+      <p class="text-xl text-gray-800">Use your favorite framework / library, or simply go vanilla. uiloos will work with your current stack and enhance it.</p>
     </div>
 
     <!-- Items -->
@@ -378,23 +378,23 @@ permalink: /
 
       <!-- 1st item -->
       <div class="relative flex flex-col items-center p-6 bg-white rounded shadow-xl h-full">
-        <img src="/images/adapters/react.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="React logo" />
+        <img src="/images/frameworks/react.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="React logo" />
         <h4 class="text-xl font-bold leading-snug tracking-tight mb-1">React</h4>
-        <p class="text-gray-600 text-center">Use ready made React components and hooks.</p>
+        <p class="text-gray-800 text-center">Use ready made React components and hooks.</p>
       </div>
 
       <!-- 2nd item -->
       <div class="relative flex flex-col items-center p-6 bg-white rounded shadow-xl h-full">
-        <img src="/images/adapters/vue.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="Vue logo"/>
+        <img src="/images/frameworks/vue.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="Vue logo"/>
         <h4 class="text-xl font-bold leading-snug tracking-tight mb-1">Vue</h4>
-        <p class="text-gray-600 text-center">Use pre-baked Vue components and composables.</p>
+        <p class="text-gray-800 text-center">Use pre-baked Vue components and composables.</p>
       </div>
 
       <!-- 3rd item -->
       <div class="relative flex flex-col items-center p-6 bg-white rounded shadow-xl h-full">
-        <img src="/images/adapters/vanilla.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
+        <img src="/images/frameworks/vanilla.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
         <h4 class="text-xl font-bold leading-snug tracking-tight mb-1">Vanilla</h4>
-        <p class="text-gray-600 text-center">Or use no framework at all and listen to changes yourself</p>
+        <p class="text-gray-800 text-center">Or use no framework at all and listen to changes yourself</p>
       </div>
     </div>
   </div>
@@ -407,7 +407,7 @@ permalink: /
     <!-- Section header -->
     <div class="max-w-3xl mx-auto text-center mb-8">
       <h2 class="h2 mb-4">What uiloos provides</h2>
-      <p class="text-xl text-gray-600">See what uiloos means for your role via a letter written just for you</p>
+      <p class="text-xl text-gray-800">See what uiloos means for your role via a letter written just for you</p>
     </div>
 
     <!-- Persona list -->
@@ -474,7 +474,7 @@ permalink: /
 
         <!-- CTA button -->
         <div>
-          <a class="btn text-purple-900 bg-gradient-to-r from-purple-100 to-white" href="/docs/getting-started">Get started</a>
+          <a class="btn text-purple-900 bg-gradient-to-r from-purple-100 to-white" href="/docs/getting-started/installation/">Get started</a>
         </div>
       </div>
     </div>
