--- a/packages/website/src/pages/pricing/pricing.njk
+++ b/packages/website/src/pages/pricing/pricing.njk
@@ -72,17 +72,17 @@ eleventyNavigation:
                 <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
                 </svg>
-                <span>For <a href="?q=personal#personal" class="underline text-blue-500">personal</a> use</span>
+                <span>For <a href="?q=personal#personal" class="underline text-purple-500">personal</a> use</span>
               </li>
               <li class="flex items-center mb-2">
                 <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
                 </svg>
-                <span>Unlimited <a href="?q=evaluation#evaluation" class="underline text-blue-500">evaluation</a> time</span>
+                <span>Unlimited <a href="?q=evaluation#evaluation" class="underline text-purple-500">evaluation</a> time</span>
               </li>
             </ul>
             <div class="border-t border-gray-200 pt-5 mt-6">
-              <a class="btn-sm text-white bg-blue-600 hover:bg-blue-700 w-full" href="/docs/getting-started/">Try now</a>
+              <a class="btn-sm text-white bg-blue-600 hover:bg-blue-700 w-full" href="/docs/getting-started/installation/">Try now</a>
             </div>
           </div>
 
@@ -109,19 +109,19 @@ eleventyNavigation:
                 <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
                 </svg>
-                <span>Deploy to <a href="?q=production#production" class="underline text-blue-500">production</a></span>
+                <span>Deploy to <a href="?q=production#production" class="underline text-purple-500">production</a></span>
               </li>
               <li class="flex items-center mb-2">
                 <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
                 </svg>
-                <span>Pay per <a href="?q=developer#developer" class="underline text-blue-500">developer</a></span>
+                <span>Pay per <a href="?q=developer#developer" class="underline text-purple-500">developer</a></span>
               </li>
               <li class="flex items-center mb-2">
                 <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
                 </svg>
-                <span><a href="?q=perpetual#perpetual" class="underline text-blue-500">Perpetual</a> license</span>
+                <span><a href="?q=perpetual#perpetual" class="underline text-purple-500">Perpetual</a> license</span>
               </li>
                <li class="flex items-center mb-2">
                 <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
@@ -165,7 +165,7 @@ eleventyNavigation:
                 <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
                 </svg>
-                <span>Deploy to <a href="?q=production#production" class="underline text-blue-500">production</a></span>
+                <span>Deploy to <a href="?q=production#production" class="underline text-purple-500">production</a></span>
               </li>
               <li class="flex items-center mb-2">
                 <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
@@ -177,7 +177,7 @@ eleventyNavigation:
                 <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
                 </svg>
-                <span><a href="?q=perpetual#perpetual" class="underline text-blue-500">Perpetual</a> license</span>
+                <span><a href="?q=perpetual#perpetual" class="underline text-purple-500">Perpetual</a> license</span>
               </li>
               <li class="flex items-center mb-2">
                 <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
@@ -285,25 +285,25 @@ eleventyNavigation:
             class="text-xl overflow-hidden transition-all duration-300 ease-in-out"
             :style="expanded ? 'max-height: ' + $refs.item.scrollHeight + 'px; opacity: 1' : 'max-height: 0; opacity: 0'"
           >
-            <p class="mb-8">
+            <p class="mb-4">
               Any developer in your company actively benefitting from "uiloos".
             </p>
-            <p class="mb-8">
+            <p class="mb-4">
               Say you have a team of 5 developers, two of those developers are purely 
               back-end developers both never touch the front-end. Two of those developers
               are full-stack developers, and the last developer is a pure front-end 
               developer.
             </p>
-            <p class="mb-8">
+            <p class="mb-4">
               In this scenario you will need three seats: one for the front-end developer,
               and two for the full-stack developers. The two back-end developers do not
               need a license.
             </p>
-            <p class="mb-8">
+            <p class="mb-4">
               The reasoning is that only the front-end, and full-stack developers benefit
               from "uiloos" in this case, because only they have been accelerated.
             </p>
-            <p class="mb-8">
+            <p class="mb-4">
               Say that in this scenario only the front-end developer actively writes code /
               components that uses "uiloos". In this case the two full-stack developers
               will indirectly benefit from "uiloos", so they will still count as 
@@ -346,16 +346,16 @@ eleventyNavigation:
             class="text-xl overflow-hidden transition-all duration-300 ease-in-out"
             :style="expanded ? 'max-height: ' + $refs.item.scrollHeight + 'px; opacity: 1' : 'max-height: 0; opacity: 0'"
           >
-            <p class="mb-8">
+            <p class="mb-4">
               Anything that is visible for other people but yourself, so the term "production" is used 
               broadly. For example these are considered production environments:
             </p>
 
             <ol class="list-decimal m-2">
-              <li class="list-decimal ml-5">A live website</li>
-              <li class="list-decimal ml-5">A published game / app</li>
-              <li class="list-decimal ml-5">A staging environment</li>
-              <li class="list-decimal ml-5">A test environment</li>
+              <li class="ml-5">A live website</li>
+              <li class="ml-5">A published game / app</li>
+              <li class="ml-5">A staging environment</li>
+              <li class="ml-5">A test environment</li>
             </ol>
           </div>
         </li>
@@ -394,17 +394,17 @@ eleventyNavigation:
             class="text-xl overflow-hidden transition-all duration-300 ease-in-out"
             :style="expanded ? 'max-height: ' + $refs.item.scrollHeight + 'px; opacity: 1' : 'max-height: 0; opacity: 0'"
           >
-            <p class="mb-8">
+            <p class="mb-4">
               The following things are considered personal use:
             </p>
 
-            <ol class="list-decimal m-2 mb-8">
-              <li class="list-decimal ml-5">Your personal website</li>
-              <li class="list-decimal ml-5">Your personal blog</li>
-              <li class="list-decimal ml-5">Demo's on sandbox sites such as: CodePen, JS Bin and CodeSandbox</li>
+            <ol class="list-decimal m-2 mb-4">
+              <li class="ml-5">Your personal website</li>
+              <li class="ml-5">Your personal blog</li>
+              <li class="ml-5">Demo's on sandbox sites such as: CodePen, JS Bin and CodeSandbox</li>
             </ol>
 
-            <p class="mb-8">
+            <p class="mb-4">
               A blog / website is considered personal when they are not monetized. The blog / site cannot
               for example contain any ads or referral links.
             </p>
@@ -445,8 +445,8 @@ eleventyNavigation:
             class="text-xl overflow-hidden transition-all duration-300 ease-in-out"
             :style="expanded ? 'max-height: ' + $refs.item.scrollHeight + 'px; opacity: 1' : 'max-height: 0; opacity: 0'"
           >
-            <p class="mb-8">
-              You may evaluate "uiloos" indefinitely, but as soon as you go to a <a href="?q=production#production" class="underline text-blue-500">production</a>
+            <p class="mb-4">
+              You may evaluate "uiloos" indefinitely, but as soon as you go to a <a href="?q=production#production" class="underline text-purple-500">production</a>
               environment your must purchase a license.
             </p>
           </div>
@@ -486,22 +486,22 @@ eleventyNavigation:
             class="text-xl overflow-hidden transition-all duration-300 ease-in-out"
             :style="expanded ? 'max-height: ' + $refs.item.scrollHeight + 'px; opacity: 1' : 'max-height: 0; opacity: 0'"
           >
-            <p class="mb-8">
+            <p class="mb-4">
               If you cancel your subscription you may indefinitely use your fallback version (or any version before the fallback version) of the "uiloos" library.
             </p>
 
-            <p class="mb-8">
+            <p class="mb-4">
               A scenario: you have a monthly subscription which you cancel, your fallback version will be any
               version released within the window the subscription has already been paid for. 
             </p>
 
-            <p class="mb-8">
+            <p class="mb-4">
               Note: you may still not exceed the number of developers you originally had in your license. If you require
               more developers you will need another subscription.
             </p>
 
-            <p class="mb-8">
-              On the <a href="https://dashboard.uiloos.dev" class="underline text-blue-500">dashboard</a> you can find your exact fallback version once you log in.
+            <p class="mb-4">
+              On the <a href="https://dashboard.uiloos.dev" class="underline text-purple-500">dashboard</a> you can find your exact fallback version once you log in.
             </p>
           </div>
         </li>
