--- a/packages/website/src/_includes/components/footer.njk
+++ b/packages/website/src/_includes/components/footer.njk
@@ -13,7 +13,7 @@
         <h6 class="text-gray-800 font-medium mb-2">Resources</h6>
         <ul class="text-sm">
           <li class="mb-2">
-            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/docs">Documentation</a>
+            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/docs">Docs</a>
           </li>
           <li class="mb-2">
             <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/api">API</a>
