--- a/packages/website/src/_includes/layouts/api.njk
+++ b/packages/website/src/_includes/layouts/api.njk
@@ -4,22 +4,13 @@ layout: ./layouts/base.njk
 
 <section>
   <div class="max-w-6xl mx-auto px-4 sm:px-6">
-
-    {% if renderData and renderData.stickyNavigation === false %} 
-    <div class="pt-12 pb-12 md:pb-20">
-    {% else %}
-    <div class="pt-32 pb-12 md:pb-20">
-    {% endif %}
-
       <!-- Main content -->
-      <div class="md:flex md:justify-between">
+    <div class="md:pb-20 xl:flex xl:justify-between">
+      {% include "../components/apinav.njk" %}
 
-        {% include "../components/apinav.njk" %}
-
-        <!-- Page container -->
-        <div class="md:grow">
-          {{ content | safe }}
-        </div>
+      <!-- Page container -->
+      <div class="md:grow xl:mt-24">
+        {{ content | safe }}
       </div>
     </div>
   </div>
