--- a/packages/website/src/pages/api/_includes/macros.njk
+++ b/packages/website/src/pages/api/_includes/macros.njk
@@ -1,7 +1,7 @@
 {% set isNumber = r/^\d*(\.\d+)?$/g %}
 
 {% macro displayApi(definitions, subapi) %}
-  <div class="grid lg:grid-cols-2">
+  <div class="grid xl:grid-cols-2 xl:text-sm">
   {% for def in definitions %}
     <a 
       href="/api/{{subapi}}/{{ def.name | slug}}/" 
@@ -25,6 +25,8 @@
         <span class="border bg-blue-400 font-medium text-white inline-block px-1 my-2 text-sm">C</span>
       {% elif def.kindString === 'Function' %}
         <span class="border bg-green-400 font-medium text-white inline-block px-1 my-2 text-sm">F</span>
+      {% elif def.kindString === 'Variable' %}
+        <span class="border bg-green-400 font-medium text-white inline-block px-1 my-2 text-sm">I</span>
       {% else %}
         <span class="border bg-orange-400 font-medium text-white inline-block px-1 my-2 text-sm">T</span>
       {% endif %}
@@ -35,14 +37,14 @@
   </div>
 {% endmacro %}
 
-{% macro displayType(type, inlineUnion = true) %}
+{% macro displayType(type, inlineUnion = true, purpleLink = true) %}
   {% if type.type === 'reference' and type.typeArguments %}
-   <a class="underline text-blue-500" href="/api/core/{{ type.name | slug}}/">{{type.name}}&lt;{{type.typeArguments[0].name}}&gt;</a>
+   <a class="underline {% if purpleLink %} text-purple-600 {% else %} text-blue-500 {% endif %}" href="/api/core/{{ type.name | slug}}/">{{type.name}}&lt;{{type.typeArguments[0].name}}&gt;</a>
   {% elif type.type === 'reference'%}
     {% if type.name === "T" or type.name === "Date" %}
       {{type.name}}
     {% else %}
-      <a class="underline text-blue-500" href="/api/core/{{ type.name | slug}}/">{{type.name}}</a>
+      <a class="underline {% if purpleLink %} text-purple-600 {% else %} text-blue-500 {% endif %}" href="/api/core/{{ type.name | slug}}/">{{type.name}}</a>
     {% endif %}
   {% elif type.type === 'intrinsic' %}
     {{type.name}}
@@ -64,19 +66,19 @@
     {% endif %}
   {% elif type.type === 'array' %}
     <span class="flex">
-    <span>{{ displayType(type.elementType) }}</span><span>[]</span>
+    <span>{{ displayType(type.elementType, inlineUnion, purpleLink) }}</span><span>[]</span>
   </span>
   {% elif type.type === 'union' %}
     {% for type in type.types %}
       {% if not inlineUnion %} | {% endif %}
-      {{ displayType(type, inlineUnion) }}
+      {{ displayType(type, inlineUnion, purpleLink) }}
       {% if not loop.last and inlineUnion %} | {% endif %}
       {% if not inlineUnion %} <br> {% endif %}
     {% endfor %}
   {% elif type.type === 'intersection' %}
     {% for type in type.types %}
       {% if not inlineUnion %} | {% endif %}
-      {{ displayType(type, inlineUnion) }}
+      {{ displayType(type, inlineUnion, purpleLink) }}
       {% if not loop.last and inlineUnion %} & {% endif %}
       {% if not inlineUnion %} <br> {% endif %}
     {% endfor %}
@@ -84,7 +86,7 @@
     <h5 class="h4">Object</h4>
     {% for item in type.declaration.children %}
       <div class="ml-4 mb-2 py-2 {% if not loop.last %} border-b-2 border-dashed {% endif %}">
-        <strong class="mb-2 font-mono">{{item.name}}</strong>: {{ displayType(item.type) }}
+        <strong class="mb-2 font-mono">{{item.name}}</strong>: {{ displayType(item.type, inlineUnion, purpleLink) }}
 
         <p class="my-2">{{item.comment.shortText | escape | nl2br}}</p>
 
@@ -122,19 +124,19 @@
           {% if signature.name === '__type' %}
           callback(
         {% else %}
-            {{signature.name}}(
+          {{ signature.name }}(
         {% endif %}
         </span>
         {% for parameter in signature.parameters %}
           <div class="ml-4 flex">
             <span class="text-orange-400">{{parameter.name}}</span>
             <span class="text-white">:</span>
-            <span class="ml-2">{{ displayType(parameter.type) }}</span>
+            <span class="ml-2">{{ displayType(parameter.type, true, false) }}</span>
             {% if not loop.last %}
               <span>,</span>{% endif %}
           </div>
         {% endfor %}
-        <span class="text-purple-400">):</span>{{ displayType(signature.type) }}
+        <span class="text-purple-400">):</span>{{ displayType(signature.type, false, false) }}
       {% endif %}
     </div>
 
@@ -166,7 +168,7 @@
       <h4 class="h4 mt-4 mb-2">Throws</h3>
       {% for tag in signature.comment.tags %}
         <p class="mb-4">
-          <a class="underline text-blue-500 font-mono font-bold block" href="/api/core/{{ tag.text.split('}')[0] | replace('{', '') | slug}}/">{{ tag.text.split('}')[0] | replace('{', '') }}</a>
+          <a class="underline text-purple-600 font-mono font-bold block" href="/api/core/{{ tag.text.split('}')[0] | replace('{', '') | slug}}/">{{ tag.text.split('}')[0] | replace('{', '') }}</a>
           
           {{tag.text.split('} ')[1]}}
         </p>
