--- a/packages/website/src/pages/api/angular/angular.njk
+++ b/packages/website/src/pages/api/angular/angular.njk
@@ -6,8 +6,8 @@ permalink: /api/angular/
 
 {% from "../_includes/macros.njk" import displayApi %}
 
-<div class="text-lg">
-  <h1 class="h1 text-gray-900 mb-4">Angular</h1>
+<div class="text-xl">
+  <h1 class="h1 mb-4">Angular</h1>
 
   <p class="mb-8">The Angular bindings for uiloos.</p>
 
