--- a/packages/website/src/pages/api/api.njk
+++ b/packages/website/src/pages/api/api.njk
@@ -7,26 +7,26 @@ eleventyNavigation:
   order: 1
 ---
 
-<div class="text-lg">
-  <h1 class="h1 text-gray-900 mb-4">API</h1>
+<div class="text-xl">
+  <h1 class="h1 mb-4">API</h1>
   <p class="mb-4">
     The uiloos API is divided in several two parts: 
   </p>
 
   <p class="mb-4">
-    The first is the <a class="underline text-blue-500" href="core/">core</a>
+    The first is the <a class="underline text-purple-600" href="core/">core</a>
     which contains all classes which can be used in vanilla JavaScript.
   </p>
 
-  <p class="mb-8">
+  <p class="mb-4">
     The second part consists of packages which make using uiloos easier in 
     various front-end frameworks by providings framework specific bindings.
     Currently there are bindings for:
   </p>
 
   <ul class="list-decimal ml-5">
-    <li class="mb-2"><a class="underline text-blue-500" href="react/">React</a></li>
-    <li class="mb-2"><a class="underline text-blue-500" href="vue/">Vue</a></li>
-    <li class="mb-2"><a class="underline text-blue-500" href="angular/">Angular</a></li>
+    <li class="mb-2"><a class="underline text-purple-600" href="react/">React</a></li>
+    <li class="mb-2"><a class="underline text-purple-600" href="vue/">Vue</a></li>
+    <li class="mb-2"><a class="underline text-purple-600" href="angular/">Angular</a></li>
   </ul>
 </div>
