--- a/packages/website/src/pages/letters/to-managers.njk
+++ b/packages/website/src/pages/letters/to-managers.njk
@@ -16,7 +16,7 @@ permalink: /letters/to-managers/
       <img class="transform scale-105 hover:-translate-y-1 transition duration-500 ease-out" src="/images/avatars/manager.svg" alt="a manager" loading="lazy"/>
     </div>
 
-    <div class="text-lg max-w-3xl mx-auto">
+    <div class="text-xl max-w-3xl mx-auto">
       <p class="mb-4">
         Dear Manager,
       </p>
