--- a/packages/website/src/styles/main.scss
+++ b/packages/website/src/styles/main.scss
@@ -4,6 +4,7 @@
 // Additional styles
 @import 'additional-styles/utility-patterns.scss';
 @import 'additional-styles/theme.scss';
+@import 'additional-styles/prism.scss';
 
 @tailwind utilities;
 
@@ -23,100 +24,5 @@
 $aos-distance: 10px;
 @import 'node_modules/aos/src/sass/aos.scss';
 
-/* maven-pro-regular - latin */
-@font-face {
-  font-family: 'Maven Pro';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/maven/maven-pro-v28-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/maven/maven-pro-v28-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/maven/maven-pro-v28-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/maven/maven-pro-v28-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/maven/maven-pro-v28-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/maven/maven-pro-v28-latin-regular.svg#MavenPro') format('svg'); /* Legacy iOS */
-}
+@import 'additional-styles/fonts.scss';
 
-/* inter-regular - latin */
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/inter/inter-v8-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/inter/inter-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inter/inter-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inter/inter-v8-latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
-}
-/* inter-500 - latin */
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/inter/inter-v8-latin-500.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/inter/inter-v8-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inter/inter-v8-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-500.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inter/inter-v8-latin-500.svg#Inter') format('svg'); /* Legacy iOS */
-}
-/* inter-700 - latin */
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/inter/inter-v8-latin-700.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/inter/inter-v8-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inter/inter-v8-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inter/inter-v8-latin-700.svg#Inter') format('svg'); /* Legacy iOS */
-}
-/* inter-800 - latin */
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 800;
-  src: url('../fonts/inter/inter-v8-latin-800.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/inter/inter-v8-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inter/inter-v8-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-800.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inter/inter-v8-latin-800.svg#Inter') format('svg'); /* Legacy iOS */
-}
-/* inter-900 - latin */
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 900;
-  src: url('../fonts/inter/inter-v8-latin-900.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/inter/inter-v8-latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inter/inter-v8-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-900.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inter/inter-v8-latin-900.svg#Inter') format('svg'); /* Legacy iOS */
-}
-
-.maven {
-  font-family: 'Maven Pro', sans-serif;
-}
-
-.visually-hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  -webkit-clip-path: inset(50%);
-  clip-path: inset(50%);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-  white-space: nowrap;
-}
