feat: added ViewChannel for building models, dialogs and flash messages
A ViewChannel is a class which represents an area on the screen which
contains visual elements (views) which are visible for a certain amount
of time, or until when the user performs a certain action.

The `ViewChannel` can be used to implement multiple types of components:

   1. A notification side bar in which the user sees notifications of the
      application for a limited amount of time.

   2. A flash message area which contain messages that tell the user an
      action was successful or not. They disappear after a certain
      amount of time, or when the user clicks on them.

   3. A modal: a window / frame which appears when the user must perform
      a specific action. The modal closes when the user either performs
      the action, or when the user cancels the action.

   4. A confirmation dialog: a small window / frame which appears asking
      the user if they are sure they want to perform a certain action.

For the Vue and React packages a new hook / composable was added called
`useViewChannel`. The both takes a `ViewChannel` and subscribe to
changes, so the component is re-rendered when the `ViewChannel`
changes.

Also did some refactoring around the fact that the `ViewChannel` and
`ActiveList` share common functionality. Added two new private
abstractions:

  1. `_History` a class which handles the ring like nature of the
      event history tracking logic.

  2. `_Observer` a class which handles subscriptions and unsubscribing
      logic.

For the "website" the core API is now split in multiple sections:
ActiveList, ViewChannel, License and Generic. This makes the API easier
to scan, as putting everything in one pile made it unreadable.

Some minor things:

1. In the angular package created a subpackage for the ActiveList.

2. Also in the angular package gave the ActiveList test an expect so
   a warning message "missing expect" does not appear when running the
   test.

3

--- a/packages/website/src/pages/api/_includes/macros.njk
+++ b/packages/website/src/pages/api/_includes/macros.njk
@@ -1,7 +1,15 @@
 {% set isNumber = r/^\d*(\.\d+)?$/g %}
 
+{% macro displayApiGroup(definitions, subapi, groups = []) %}
+  {% for group in groups %}
+    <h2 class="h2 mb-2" id="{{group}}"><a href="#{{group}}">{{loop.index}}. {{group}}</a></h3>
+
+    {{ displayApi(definitions | groupApi(groups, group), subapi) }}
+  {% endfor %}
+{% endmacro %}
+
 {% macro displayApi(definitions, subapi) %}
-  <div class="grid xl:grid-cols-2 xl:text-sm">
+  <div class="grid xl:grid-cols-2 xl:text-sm px-1 mb-2">
   {% for def in definitions %}
     <a 
       href="/api/{{subapi}}/{{ def.name | slug}}/" 
@@ -41,7 +49,7 @@
   {% if type.type === 'reference' and type.typeArguments %}
    <a class="underline {% if purpleLink %} text-purple-600 {% else %} text-blue-500 {% endif %}" href="/api/core/{{ type.name | slug}}/">{{type.name}}&lt;{{type.typeArguments[0].name}}&gt;</a>
   {% elif type.type === 'reference'%}
-    {% if type.name === "T" or type.name === "Date" %}
+    {% if type.name.length === 1 or type.name === "Date" %}
       {{type.name}}
     {% else %}
       <a class="underline {% if purpleLink %} text-purple-600 {% else %} text-blue-500 {% endif %}" href="/api/core/{{ type.name | slug}}/">{{type.name}}</a>
