improvement: now sorting API listings created by `displayApi` macro.
The new sort order makes sure that the most important exports are put
higher on the page, and lesser exports such as errors and events lower
on the page. This makes the API listings more readable.

--- a/packages/website/src/pages/api/_includes/macros.njk
+++ b/packages/website/src/pages/api/_includes/macros.njk
@@ -1,8 +1,8 @@
 {% set isNumber = r/^\d*(\.\d+)?$/g %}
 
 {% macro displayApi(definitions, subapi) %}
-  <div class="grid xl:grid-cols-2 xl:text-sm">
-  {% for def in definitions %}
+  <div class="grid xl:grid-cols-2 xl:text-sm px-1 mb-2">
+  {% for def in definitions | sortApi %}
     <a 
       href="/api/{{subapi}}/{{ def.name | slug}}/" 
       class="block font-mono"
